Small fix to CSS

--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
         <img class="decor right" src="images/website/decor-2.png" alt="Watercolor brush stroke right">
 
         <p class="script">Ci sposiamo!</p>
-        <h1>ANDREA &amp; TERESA</h1>
+        <h1>
+            <span class="hero-name">ANDREA</span>
+            <span class="hero-amp">&amp;</span>
+            <span class="hero-name">TERESA</span>
+        </h1>
         <p class="date">19.09.2026</p>
         <div class="heart">&#10084;</div>
     </section>
